--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: "ruby:2.5.1"
+image: "ruby:2.6.2"
 
 variables:
   POSTGRES_DB: test_db
@@ -20,7 +20,7 @@ test:
     - apt-get update -qq && apt-get install -y -qq postgresql postgresql-contrib libpq-dev cmake nodejs
     - ruby -v
     - which ruby
-    - gem install bundler --no-ri --no-rdoc
+    - gem install bundler --no-document
     - RAILS_ENV=test bundle install --jobs $(nproc) "${FLAGS[@]}"
     - RAILS_ENV=test bundle exec rubocop
     - cp config/database.yml.gitlab config/database.yml
